graylog/overlays/nprd-apps/graylog-syslog-service-selector-patch.yaml
# Patch to fix syslog service selector
# Override commonLabels app=graylog with app=graylog-app to match pod
# Pod has: app=graylog-app, app.kubernetes.io/name=graylog, app.kubernetes.io/instance=graylog
# commonLabels adds app=graylog to selector, which doesn't match pod's app=graylog-app
# Use $patch: replace on spec to completely replace selector (overrides commonLabels)
# Must include all spec fields because $patch: replace replaces the entire spec
apiVersion: v1
kind: Service
metadata:
  name: graylog-syslog
  namespace: managed-graylog
spec:
  $patch: replace
  type: NodePort
  ports:
  - name: syslog-udp
    port: 514
    targetPort: 514
    protocol: UDP
    nodePort: 30514
  selector:
    app: graylog-app
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: graylog
